# MyFfmpegDemo3

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/zcf/myffmpegdemo3/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/zcf/myffmpegdemo3/: MainActivity.kt
app/src/main/res/values/: strings.xml
app/src/test/java/com/zcf/myffmpegdemo3/: ExampleUnitTest.kt
ffmpegLibrary/: CMakeLists.txt  build.gradle
ffmpegLibrary/src/androidTest/java/com/zcf/ffmpeglibrary/: ExampleInstrumentedTest.kt
ffmpegLibrary/src/main/: AndroidManifest.xml
ffmpegLibrary/src/main/cpp/: AndroidLog.h  MyAudio.cpp  MyAudio.h  MyCallJava.cpp  MyCallJava.h  MyFfmpeg.cpp  MyFfmpeg.h  MyQueue.cpp  MyQueue.h  MyStatue.cpp  MyStatue.h  native-lib.cpp
ffmpegLibrary/src/main/cpp/include/libavcodec/: avcodec.h  avdct.h  jni.h  mediacodec.h  qsv.h  vdpau.h  videotoolbox.h  vorbis_parser.h
ffmpegLibrary/src/main/cpp/include/libavdevice/: avdevice.h
ffmpegLibrary/src/main/cpp/include/libavfilter/: avfilter.h  buffersink.h  buffersrc.h
ffmpegLibrary/src/main/cpp/include/libavformat/: avformat.h  avio.h
ffmpegLibrary/src/main/cpp/include/libavutil/: aes.h  aes_ctr.h  blowfish.h  camellia.h  cast5.h  des.h  eval.h  fifo.h  file.h  hash.h  hmac.h  hwcontext.h  hwcontext_d3d11va.h  imgutils.h  log.h  mathematics.h  md5.h  murmur3.h  opt.h  parseutils.h  pixelutils.h  rc4.h  ripemd.h  sha.h  sha512.h  tea.h  tree.h  twofish.h  tx.h  xtea.h
ffmpegLibrary/src/main/cpp/include/libswresample/: swresample.h
ffmpegLibrary/src/main/cpp/include/libswscale/: swscale.h
ffmpegLibrary/src/main/java/com/zcf/ffmpeglibrary/: FfmpegDemo.java
ffmpegLibrary/src/test/java/com/zcf/ffmpeglibrary/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
